Add picture, heading, introduction

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<html>
+<head>
+	<title>Discovery</title>
+</head>
+<body>
+	<center><img src="http://66.media.tumblr.com/b77f478ccc973347b3076e0f036ba62e/tumblr_mnmcsrwqD21ql3r9do1_1280.jpg" alt="Sungnyemun Gate at night"  width="640" height="425" /></center>
+	<br>
+	<center>Photo credit: Robert Koehler <a href="http://rjkoehler.tumblr.com/post/51730239482/another-shot-of-seouls-landmarkand-newly">Rober Koehler Travel Photography</a></center>
+	<br>
+	<center><h1>Where to next?</h1>
+	<p>Traveling to me is about learning more about the world and yourself. I really enjoy learning new cultures, eating new foods, different scenery, and meeting new people along the way.</p></center>
+</body>
+</html>
