add recent travels

--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
 	<br>
 	<center>Photo credit: Robert Koehler <a href="http://rjkoehler.tumblr.com/post/51730239482/another-shot-of-seouls-landmarkand-newly">Rober Koehler Travel Photography</a></center>
 	<br>
-	<center><h1>Where to next?</h1>
-	<p>Traveling to me is about learning more about the world and yourself. I really enjoy learning new cultures, eating new foods, different scenery, and meeting new people along the way.</p></center>
+	<center><h1>Where to <em>next</em>?</h1>
+	<p>Traveling to me is about learning more about the <b>world</b> and <em>yourself</em>. </br>I really enjoy learning new cultures, eating new foods, different scenery, and meeting new people along the way.</p></center>
+	<br>
+	<p>List of countries I would like to visit next:</p> 
+	<ul>
+		<li>Croatia</li>
+		<li>Thailand</li>
+		<li>New Zealand</li>
+		<li>Turkey</li>
+		<li>Spain</li>
+	</ul>
+
+	<center><h2>Recent Travels</h2></center>
+	<center><img src="../../../pictures/seattle_sunset.jpg" alt=seattle width="1359" height="293" /></center>
+
+	<ol>
+		<li>Vancouver: <p>I am always amazed when I go somewhere new and Vancouver was no exception. Trees, greens, and plants everywhere and it was beautiful.</p></li>
+		<li>Victoria: <p>Visited the famous Butchart Gardens! "You can learn a lot of things from the flower." -Alice in Wonderland</p></li>
+		<li>Seattle: <p>I have been to Seattle countless times and I always love it. Pike's market, the mountains, the food, and just the atomosphere is always marvelous. Simply marvelous.</p></li>
+	</ol>
+
+
 </body>
 </html>
