add suggestions form and thank you page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,30 @@
 		<li>Spain</li>
 	</ul>
 
+
+	<form name="Destinations" action="thanks.html" method="post">
+		<p>I am open to suggestions for places to go.</br> Please feel free to tell me a place and some things to do or where to eat :)</p>
+		<fieldset>
+			<div>
+				<label>Place:</label>
+				<input type="text" name="destinationname">
+			</div>
+			<br>
+			<div>
+				<label>Things to do:</label>
+				<br>
+				<textarea name"activites" cols="20" rows="6">Hiking, Swimming, Museums, etc...</textarea>
+			</div>
+			<br>
+			<div>
+				<label>Places to eat:</label>
+				<br>
+				<textarea name"food" cols="20" rows="6">Restaurants, street vendors, carts, etc...</textarea>
+			</div>
+			</fieldset>
+		<button type="submit">Submit</button
+		</form>
+
 	<center><h2>Recent Travels</h2></center>
 	<center><img src="../../../pictures/seattle_sunset.jpg" alt=seattle width="1359" height="293" /></center>
 
