Add home page link on thank you page

--- a/thanks.html
+++ b/thanks.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Thanks!</title>
@@ -6,6 +7,8 @@
 	<h1>Thanks for you input!</h1>
 	<br>
 	<p>I hope to visit your city/country you chose soon!</p>
+
+	<a href="index.html">Back to Home Page</a>
 
 </body>
 </html>
