--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Discovery</title>
@@ -10,6 +11,7 @@
 	<center><h1>Where to <em>next</em>?</h1>
 	<p>Traveling to me is about learning more about the <b>world</b> and <em>yourself</em>. </br>I really enjoy learning new cultures, eating new foods, different scenery, and meeting new people along the way.</p></center>
 	<br>
+	
 	<p>List of countries I would like to visit next:</p> 
 	<ul>
 		<li>Croatia</li>
@@ -18,10 +20,9 @@
 		<li>Turkey</li>
 		<li>Spain</li>
 	</ul>
-
-
+		
 	<form name="Destinations" action="thanks.html" method="post">
-		<p>I am open to suggestions for places to go.</br> Please feel free to tell me a place and some things to do or where to eat :)</p>
+		<p>I am open to suggestions for places to go.</br> Please feel free to tell me a place and some things to do and/or where to eat :)</p>
 		<fieldset>
 			<div>
 				<label>Place:</label>
@@ -48,7 +49,7 @@
 
 	<ol>
 		<li>Vancouver: <p>I am always amazed when I go somewhere new and Vancouver was no exception. Trees, greens, and plants everywhere and it was beautiful.</p></li>
-		<li>Victoria: <p>Visited the famous Butchart Gardens! "You can learn a lot of things from the flower." -Alice in Wonderland</p></li>
+		<li>Victoria: <p>Visited the famous Butchart Gardens! <q>You can learn a lot of things from the flower.</q> -Alice in Wonderland</p></li>
 		<li>Seattle: <p>I have been to Seattle countless times and I always love it. Pike's market, the mountains, the food, and just the atomosphere is always marvelous. Simply marvelous.</p></li>
 	</ol>
 
