Added content about similar website

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
 		<li>Seattle: <p>I have been to Seattle countless times and I always love it. Pike's market, the mountains, the food, and just the atomosphere is always marvelous. Simply marvelous.</p></li>
 	</ol>
 
+	<center><h3>Spotlight</h3></center>
+	
+	<center><p>I really enjoy this travel blog called <a href="http://wandering.world/">Wandering the World</a> because it is simple and a fun easy read. </br>There are always great pictures of food and adventures, as well as, great tips, recommendations, and things to do.</p></center>
+
+
 
 </body>
 </html>
