--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<title>Discovery</title>
 </head>
 <body>
-	<center><img src="http://66.media.tumblr.com/b77f478ccc973347b3076e0f036ba62e/tumblr_mnmcsrwqD21ql3r9do1_1280.jpg" alt="Sungnyemun Gate at night"  width="640" height="425" /></center>
+	<img src="http://66.media.tumblr.com/b77f478ccc973347b3076e0f036ba62e/tumblr_mnmcsrwqD21ql3r9do1_1280.jpg" alt="Sungnyemun Gate at night"  width="640" height="425" />
 	<br>
-	<center>Photo credit: Robert Koehler <a href="http://rjkoehler.tumblr.com/post/51730239482/another-shot-of-seouls-landmarkand-newly">Rober Koehler Travel Photography</a></center>
+	Photo credit: Robert Koehler <a href="http://rjkoehler.tumblr.com/post/51730239482/another-shot-of-seouls-landmarkand-newly">Rober Koehler Travel Photography</a>
 	<br>
-	<center><h1>Where to <em>next</em>?</h1>
-	<p>Traveling to me is about learning more about the <b>world</b> and <em>yourself</em>. </br>I really enjoy learning new cultures, eating new foods, different scenery, and meeting new people along the way.</p></center>
+	<h1>Where to <em>next</em>?</h1>
+	<p>Traveling to me is about learning more about the <b>world</b> and <em>yourself</em>. <br>I really enjoy learning new cultures, eating new foods, different scenery, and meeting new people along the way.</p>
 	<br>
 	
 	<p>List of countries I would like to visit next:</p> 
@@ -20,9 +20,9 @@
 		<li>Turkey</li>
 		<li>Spain</li>
 	</ul>
-		
+		<br>
 	<form name="Destinations" action="thanks.html" method="post">
-		<p>I am open to suggestions for places to go.</br> Please feel free to tell me a place and some things to do and/or where to eat :)</p>
+		<p>I am open to suggestions for places to go.<br> Please feel free to tell me a place and some things to do and/or where to eat :)</p>
 		<fieldset>
 			<div>
 				<label>Place:</label>
@@ -32,30 +32,33 @@
 			<div>
 				<label>Things to do:</label>
 				<br>
-				<textarea name"activites" cols="20" rows="6">Hiking, Swimming, Museums, etc...</textarea>
+				<textarea name="comments" cols="20" rows="6">Hiking, Swimming, Museums, etc...</textarea>
 			</div>
 			<br>
 			<div>
 				<label>Places to eat:</label>
 				<br>
-				<textarea name"food" cols="20" rows="6">Restaurants, street vendors, carts, etc...</textarea>
+				<textarea name="comments" cols="20" rows="6">Restaurants, street vendors, carts, etc...</textarea>
 			</div>
 			</fieldset>
-		<button type="submit">Submit</button
-		</form>
+		<button type="submit">Submit</button>
+	</form>
 
-	<center><h2>Recent Travels</h2></center>
-	<center><img src="../../../pictures/seattle_sunset.jpg" alt=seattle width="1359" height="293" /></center>
 
+	<h2>Recent Travels</h2>
+	<img src="http://i.imgur.com/QUX9ciM.jpg" alt="gas works park seattle" width="1359" height="293" />
+	<br>
+	Photo credit: Paula Lee
+	<br>
 	<ol>
 		<li>Vancouver: <p>I am always amazed when I go somewhere new and Vancouver was no exception. Trees, greens, and plants everywhere and it was beautiful.</p></li>
-		<li>Victoria: <p>Visited the famous Butchart Gardens! <q>You can learn a lot of things from the flower.</q> -Alice in Wonderland</p></li>
+		<li>Victoria: <p>Visited the famous Butchart Gardens! <q>You can learn a lot of things from the flowers.</q> -Alice in Wonderland</p></li>
 		<li>Seattle: <p>I have been to Seattle countless times and I always love it. Pike's market, the mountains, the food, and just the atomosphere is always marvelous. Simply marvelous.</p></li>
 	</ol>
 
-	<center><h3>Spotlight</h3></center>
+	<h3>Spotlight</h3>
 	
-	<center><p>I really enjoy this travel blog called <a href="http://wandering.world/">Wandering the World</a> because it is simple and a fun easy read. </br>There are always great pictures of food and adventures, as well as, great tips, recommendations, and things to do.</p></center>
+	<p>I really enjoy this travel blog called <a href="http://wandering.world/">Wandering the World</a> because it is simple and a fun easy read. <br>There are always great pictures of food and adventures, as well as, great tips, recommendations, and things to do.</p>
 
 
 
