Add link to css stylesheet

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Discovery</title>
+	<link href="styles.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 	<img src="http://66.media.tumblr.com/b77f478ccc973347b3076e0f036ba62e/tumblr_mnmcsrwqD21ql3r9do1_1280.jpg" alt="Sungnyemun Gate at night"  width="640" height="425" />
