--- a/thanks.html
+++ b/thanks.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Thanks!</title>
+	<link href="styles.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 	<h1>Thanks for you input!</h1>
