--- a/thanks.html
+++ b/thanks.html
@@ -4,7 +4,7 @@
 	<title>Thanks!</title>
 	<link href="styles.css" type="text/css" rel="stylesheet" />
 </head>
-<body>
+<body id="thanks-page">
 	<h1>Thanks for you input!</h1>
 	<br>
 	<p>I hope to visit your city/country you chose soon!</p>
