change background image format

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		Discovery</title>
+	<title>Discovery</title>
 	<link href="styles.css" type="text/css" rel="stylesheet" />
 		
 </head>
 <body>
-	<div id="bg-img"></div>
+	<div class="bg-img">
+		<div class="bg-layer"></div>
+	</div>
 		<img id="intro-pic" src="http://66.media.tumblr.com/b77f478ccc973347b3076e0f036ba62e/tumblr_mnmcsrwqD21ql3r9do1_1280.jpg" alt="Sungnyemun Gate at night" />
 	<br>
 	<div id="intro-pc">
