Add media query format background image format thanks page

--- a/index.html
+++ b/index.html
@@ -6,32 +6,29 @@
 		
 </head>
 <body>
-	<div class="bg-img">
-		<div class="bg-layer"></div>
-	</div>
 		<img id="intro-pic" src="http://66.media.tumblr.com/b77f478ccc973347b3076e0f036ba62e/tumblr_mnmcsrwqD21ql3r9do1_1280.jpg" alt="Sungnyemun Gate at night" />
 	<br>
-	<div id="intro-pc">
+	<div class="photocred" class="body-text">
 		Photo credit: Robert Koehler <a href="http://rjkoehler.tumblr.com/post/51730239482/another-shot-of-seouls-landmarkand-newly">Rober Koehler Travel Photography</a>
 	</div>
 	<br>
-	<nav>
+	<!-- <nav>
 		<ul>
 			<li><a href="suggestForm">Suggestion Form</a></li>
 			<li><a href="rTravels"> Recent Travels</a></li>
 			<li><a href="spotlight">Spotlight</a></li>
 		</ul>
-	</nav>
+	</nav> -->
 
 	<br>
 	<div id="beg">
 		<h1 class="heading">Where to <em>next</em>?</h1>
-		<p class="pstyle">Traveling to me is about learning more about the <b>world</b> and <em>yourself</em>. <br>I really enjoy learning new cultures, eating new foods, different scenery, and meeting new people along the way.</p>
+		<p class="pstyle" class="body-text">Traveling to me is about learning more about the <b>world</b> and <em>yourself</em>. <br>I really enjoy learning new cultures, eating new foods, different scenery, and meeting new people along the way.</p>
 	<br>
 	</div>
 
 	<div id="listForm">
-		<div id="countryList">	
+		<div id="countryList" class="body-text">	
 			<p>List of countries I would like to visit next:</p> 
 				<ul>
 					<li>Croatia</li>
@@ -44,48 +41,49 @@
 			<br>	
 		<div id="suggestForm">
 			<form name="Destinations" action="thanks.html" method="post">
-			<p>I am open to suggestions for places to go.<br> Please feel free to tell me a place and some things to do and/or where to eat :)</p>
+			<p class="body-text">I am open to suggestions for places to go.<br> Please feel free to tell me a place and some things to do and/or where to eat :)</p>
 				<fieldset>
-				<div id="place">
+				<div id="place" class="body-text">
 					<label>Place:
 					<input type="text" name="destinationname"></label>
 				</div>
 				<br>
 
-				<div id="activities">
+				<div id="activities" class="body-text">
 					<label>Things to do:</label>
 					<br>
 					<textarea name="comments" cols="20" rows="6">Hiking, Swimming, Museums, etc...</textarea>
 				</div>
 				<br>
-				<div id="eating">
+				<div id="eating" class="body-text">
 					<label>Places to eat:</label>
 					<br>
 					<textarea name="comments" cols="20" rows="6">Restaurants, street vendors, carts, etc...</textarea>
 				</div>
 				</fieldset>
-			<button type="submit">Submit</button>
+			<button class="body-text" type="submit">Submit</button>
 			</form>
 	</div>
-
-	<h2 id="rTravels" class="heading">Recent Travels</h2>
-		<div id="gasworks">
-			<img src="http://i.imgur.com/QUX9ciM.jpg" alt="gas works park seattle" width="1133" height="245" />
-		</div>
-	<br>
-	Photo credit: Paula Lee
-	<br>
 	<div>
-		<ol>
-			<li>Vancouver: <p>I am always amazed when I go somewhere new and Vancouver was no exception. Trees, greens, and plants everywhere and it was beautiful.</p></li>
-			<li>Victoria: <p>Visited the famous Butchart Gardens! <q>You can learn a lot of things from the flowers.</q> -Alice in Wonderland</p></li>
-			<li>Seattle: <p>I have been to Seattle countless times and I always love it. Pike's market, the mountains, the food, and just the atomosphere is always marvelous. Simply marvelous.</p></li>
-		</ol>
+		<h2 id="rTravels" class="heading">Recent Travels</h2>
+		<br>
+		<img src="http://i.imgur.com/QUX9ciM.jpg" id="gasworks" alt="gas works park seattle" />
+		<div class="photocred" class="body-text">
+			Photo credit: Paula Lee
+		</div>
+		<br>
+		<div>
+			<ol class="body-text">
+				<li>Vancouver: <p>I am always amazed when I go somewhere new and Vancouver was no exception. Trees, greens, and plants everywhere and it was beautiful.</p></li>
+				<li>Victoria: <p>Visited the famous Butchart Gardens! <q>You can learn a lot of things from the flowers.</q> -Alice in Wonderland</p></li>
+				<li>Seattle: <p>I have been to Seattle countless times and I always love it. Pike's market, the mountains, the food, and just the atomosphere is always marvelous. Simply marvelous.</p></li>
+			</ol>
+		</div>
 	</div>
 	<div id="spotlight">
 		<h3 class="heading">Spotlight</h3>
 		
-		<p class="pstyle">I really enjoy this travel blog called <a href="http://wandering.world/">Wandering the World</a> because it is simple and a fun easy read. <br>There are always great pictures of food and adventures, as well as, great tips, recommendations, and things to do.</p>
+		<p class="pstyle" class="body-text">I really enjoy this travel blog called <a href="http://wandering.world/">Wandering the World</a> because it is simple and a fun easy read. <br>There are always great pictures of food and adventures, as well as, great tips, recommendations, and things to do.</p>
 	</div>
 
 </body>
