--- a/thanks.html
+++ b/thanks.html
@@ -4,12 +4,14 @@
 	<title>Thanks!</title>
 	<link href="styles.css" type="text/css" rel="stylesheet" />
 </head>
-<body id="thanks-page">
-	<h1>Thanks for you input!</h1>
-	<br>
-	<p>I hope to visit your city/country you chose soon!</p>
+<body>
+	<div id="thanks-body">
+		<h1 class="heading">Thanks for you input!</h1>
+		<br>
+		<p>I hope to visit your city/country you chose soon!</p>
 
-	<a href="index.html">Back to Home Page</a>
+		<a href="index.html">Back to Home Page</a>
+	</div>
 
 </body>
 </html>
