add sticky on logo to go back to the top

--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
     </head>
 
     <body>
+        <a name="home"></a>
         <header>
             <nav>
                 <div class="row">
                     <img src="resources/img/paula_lee_logo_9.png" alt="Paula Lee logo" class="logo">
-                    <img src="resources/img/paula_lee_logo_7.png" alt="PL dark logo" class="dark-logo">
+                    <a href="#home"><img src="resources/img/paula_lee_logo_7.png" alt="PL dark logo" class="dark-logo"></a>
                     <ul class="main-nav">
                         <li><a href="#about-me">Discover</a></li>
                         <li><a href="#works">Projects</a></li>
