adding more to about me

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <div class="about-me-wrapper">
                   Howdy! I'm Paula. I'm a 
                   <expando>
-                    <initial><a>Texan</a>, </initial>
+                    <initial><a>Texas native</a>, </initial>
                     <expanded>
-                        Texan who loves barbecue,
+                        Texas native who loves barbecue,
                     </expanded>
                        and I made my way to Silicon Valley to pursue my dream of becoming a 
                   </expando>
@@ -105,7 +105,27 @@
                           </expando>
                       </expanded>
                   </expando>
-                    I'm passionate about building beautiful things with 
+                    I'm passionate about building <a href="#works">beautiful things</a>, going on 
+                    <expando>
+                        <initial><a>adventures</a>, </initial>
+                        <expanded>
+                            adventures to explore the world and learning about new cultures,
+                        </expanded>
+                    </expando>
+                     all things 
+                    <expando>
+                        <initial><a>food</a>,</initial>
+                        <expanded>
+                            food,
+                        </expanded>
+                    </expando>
+                    and great
+                    <expando>
+                        <initial><a>reads</a>.</initial>
+                        <expanded>
+                            adventures and imagination starts with reading.
+                        </expanded>
+                    </expando>
                 </div>
             </div>
         </section>
