adding end of about-me

--- a/index.html
+++ b/index.html
@@ -112,20 +112,35 @@
                             adventures to explore the world and learning about new cultures,
                         </expanded>
                     </expando>
-                     all things 
-                    <expando>
-                        <initial><a>food</a>,</initial>
-                        <expanded>
-                            food,
-                        </expanded>
-                    </expando>
-                    and great
+                     all things food, and great
                     <expando>
                         <initial><a>reads</a>.</initial>
                         <expanded>
-                            adventures and imagination starts with reading.
+                            reads that foster imagination.
                         </expanded>
                     </expando>
+                My goals are to 
+                <expando>
+                    <initial><a>expand</a> my</initial>
+                    <expanded>
+                        expand my creative and logical
+                    </expanded>
+                </expando>                    
+                skills, 
+                <expando>
+                    <initial><a>contribute</a> my ideas and learnings, </initial>
+                    <expanded>
+                        contribute my growing knowledge of 
+                        <a href="#skills">programming languages,</a>
+                    </expanded>
+                </expando>
+                and build amazing things.
+                
+                Thanks for 
+                <expando>
+                    <initial>stopping by!</initial>
+                    <expanded> stopping by! Want to <a href="#contact">connect</a>?</expanded>
+                </expando>
                 </div>
             </div>
         </section>
