--- a/index.html
+++ b/index.html
@@ -247,20 +247,13 @@
         <section class="contact" id="contact">
             <h2>Let's Connect</h2>
             
-            <div class="wrapper">
-                <div class="start expando-region">
-                    "Howdy I'm Paula. I'm a "
-                    <span class="expando">
-                        <span class="initial">
-                            <a class="expander">Texan</a>
-                            ", who has moved to Silicon Valley to pursue my dream of becoming a "
-                        </span>
-                        <span class="expanded">
-                            Texan, who loves barbeque
-                        </span>
-                    </span>
-                </div>
-
+            <div class="contact-me">
+                <ul class="social-nav">
+                    <li><a href="https://github.com/pdlee877" target="_blank"><i class="ion-social-github icon-big"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/paula-lee" target="_blank"><i class="ion-social-linkedin icon-big"></i></a></li>
+                    <li><a href="mailto:pdlee877@gmail.com" target="_top"><i class="ion-ios-email icon-big tooltip" title="pdlee877@gmail.com"></i></a></li>
+                    <li><a href="#"><i class="ion-android-phone-portrait icon-big tooltip" title="(281) 827-8748"></i></a></li>
+                </ul>
             </div>
         </section>
         
