change the highlighted text from telescopic and change some wording on about-me

--- a/index.html
+++ b/index.html
@@ -65,54 +65,48 @@
                 <h2>Discover</h2>
                 
                 <div class="about-me-wrapper">
-                  Howdy! I'm Paula. I'm a 
+                  Howdy! I'm Paula, a 
                   <expando>
-                    <initial><a>Texas native</a>, </initial>
+                    <initial><a>Texan</a>, </initial>
                     <expanded>
-                        Texas native who loves barbecue,
+                        Texan and lover of barbecue,
                     </expanded>
-                       and I made my way to Silicon Valley to pursue my dream of becoming a 
+                       who moved to Silicon Valley to pursue my dream of becoming a 
                   </expando>
                   <expando>
                     <initial><a>web developer</a>.</initial>
                     <expanded>
-                      web developer. I realized I love solving technical problems when I used to work with 
-                      <expando>
-                        <initial><a>Excel functions</a>.</initial>
-                        <expanded>
-                          Excel functions that helped my company automate reports.
-                        </expanded>
-                      </expando>
+                      web developer. I realized my passion for solving technical problems when I worked with Excel to create reports, debug, or make a nested IF function.
                     </expanded>
                   </expando>
-                  As a 
+                  As a full-stack developer, I enjoy working on both  
                   <expando>
-                    <initial><a>developer</a>, </initial>
-                      <expanded>
-                        developer, I enjoy working on both  
-                          <expando>
-                            <initial>front-end</initial>
-                            <expanded>
-                                front-end (design patterns, clean interfaces, and meaningful iconography)
-                            </expanded>
-                          </expando>
-                          and
-                          <expando>
-                            <initial><a>back-end</a>.</initial>
-                                <expanded>
-                                    back-end (single responsibility methods, test-driven development, and modularity)
-                                </expanded>
-                          </expando>
-                      </expanded>
+                    <initial>front-end</initial>
+                    <expanded>
+                        front-end (design patterns, clean interfaces, and meaningful iconography)
+                    </expanded>
                   </expando>
-                    I'm passionate about building <a href="#works">beautiful things</a>, going on 
+                  and
+                  <expando>
+                    <initial><a>back-end</a>.</initial>
+                        <expanded>
+                            back-end (single responsibility methods, test-driven development, and modularity).
+                        </expanded>
+                  </expando>
+                    I love building <a href="#works">beautiful things</a>, going on 
                     <expando>
                         <initial><a>adventures</a>, </initial>
                         <expanded>
-                            adventures to explore the world and learning about new cultures,
+                            adventures to explore new cultures,
                         </expanded>
                     </expando>
-                     all things food, and great
+                    <expando>
+                        <initial><a>fishing</a>, </initial>
+                        <expanded>
+                            fishing trips with my family, 
+                        </expanded>
+                    </expando>
+                    and great
                     <expando>
                         <initial><a>reads</a>.</initial>
                         <expanded>
@@ -128,18 +122,18 @@
                 </expando>                    
                 skills, 
                 <expando>
-                    <initial><a>contribute</a> my ideas and learnings, </initial>
+                    <initial><a>contribute</a> to open source projects, </initial>
                     <expanded>
                         contribute my growing knowledge of 
-                        <a href="#skills">programming languages,</a>
+                        <a href="#skills">programming languages</a> to open source projects,
                     </expanded>
                 </expando>
-                and build amazing things.
+                and continue learning.
                 
                 Thanks for 
                 <expando>
                     <initial>stopping by!</initial>
-                    <expanded> stopping by! Want to <a href="#contact">connect</a>?</expanded>
+                    <expanded> stopping by! Want to <a href="#contact">connect</a>? Let's grab coffee!</expanded>
                 </expando>
                 </div>
             </div>
