made clam icon for about-me

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <expando>
                     <initial><a>web developer</a>.</initial>
                     <expanded>
-                      web developer. I realized my passion for solving technical problems when I worked with Excel to create reports, debug, or make a nested IF function.
+                      web developer. I realized my passion for solving technical problems when I worked with Excel to create reports, debug, or make a nested IF function. <br><br>
                     </expanded>
                   </expando>
                   As a full-stack developer, I enjoy working on both  
@@ -97,20 +97,20 @@
                     <expando>
                         <initial><a>adventures</a>, </initial>
                         <expanded>
-                            adventures to explore new cultures,
+                            adventures to explore the world,
                         </expanded>
                     </expando>
                     <expando>
-                        <initial><a>fishing</a>, </initial>
+                        <initial><a>clamming</a>, </initial>
                         <expanded>
-                            fishing trips with my family, 
+                            clamming (<img src="resources/img/purple.png" class="clam">),
                         </expanded>
                     </expando>
-                    and great
+                    and 
                     <expando>
-                        <initial><a>reads</a>.</initial>
+                        <initial><a>reading</a>.</initial>
                         <expanded>
-                            reads that foster imagination.
+                            reading to figuratively time travel.<br><br>
                         </expanded>
                     </expando>
                 My goals are to 
