change hover background color to underline to make it look more clickable

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <a href="#skills">programming languages</a> to open source projects,
                     </expanded>
                 </expando>
-                and continue learning.
+                and stay curious.
                 
                 Thanks for 
                 <expando>
