change the style of build beautiful things and programming languages to lists instead of links to not be abrupt when reading

--- a/index.html
+++ b/index.html
@@ -93,7 +93,14 @@
                             back-end (single responsibility methods, test-driven development, and modularity).
                         </expanded>
                   </expando>
-                    I love building <a href="#works">beautiful things</a>, going on 
+                    I love building 
+                    <expando>
+                        <initial><a>beautiful things</a>, </initial>
+                        <expanded>
+                            beautiful things (<a href="https://github.com/pdlee877/WaterMe">WaterMe</a>, <a href="https://github.com/xdkernelx/auto-biography">auto-biography</a>, <a href="https://github.com/sally/plzhalp">plzhalp</a>, <a href="https://github.com/samuelparker/warrnt">Warrnt</a>)
+                        </expanded>
+                    </expando> 
+                    going on 
                     <expando>
                         <initial><a>adventures</a>, </initial>
                         <expanded>
@@ -125,7 +132,13 @@
                     <initial><a>contribute</a> to open source projects, </initial>
                     <expanded>
                         contribute my growing knowledge of 
-                        <a href="#skills">programming languages</a> to open source projects,
+                        <expando>
+                            <initial>programming languages</initial>
+                            <expanded>
+                                programming languages(currently: Swift and Python) 
+                            </expanded>
+                        </expando>
+                        to open source projects,
                     </expanded>
                 </expando>
                 and stay curious.
