add space and learning for programming language expand

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <expando>
                             <initial>programming languages</initial>
                             <expanded>
-                                programming languages(currently: Swift and Python) 
+                                programming languages (currently learning Swift and Python) 
                             </expanded>
                         </expando>
                         to open source projects,
