--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <expando>
                         <initial><a>beautiful things</a>, </initial>
                         <expanded>
-                            beautiful things (<a href="https://github.com/pdlee877/WaterMe">WaterMe</a>, <a href="https://github.com/xdkernelx/auto-biography">auto-biography</a>, <a href="https://github.com/sally/plzhalp">plzhalp</a>, <a href="https://github.com/samuelparker/warrnt">Warrnt</a>)
+                            beautiful things (<a href="https://github.com/pdlee877/WaterMe" target="_blank">WaterMe</a>, <a href="https://github.com/xdkernelx/auto-biography" target="_blank">auto-biography</a>, <a href="https://github.com/sally/plzhalp" target="_blank">plzhalp</a>, <a href="https://github.com/samuelparker/warrnt" target="_blank">Warrnt</a>)
                         </expanded>
                     </expando> 
                     going on 
